--- a/src/app/config-perfil/config-perfil.page.html
+++ b/src/app/config-perfil/config-perfil.page.html
@@ -22,113 +22,136 @@
       </ion-label>
     </ion-item>
   </div>
-  <ion-list cdkDropListGroup>
+
+  <form [formGroup]="grupoForm"  (submit)="onSubmit()">
+  
+  <ion-list cdkDropListGroup
+  >
     <mat-accordion multi="true">
       <mat-expansion-panel #pp 
-        cdkDropList
-        [cdkDropListData]="publico"
-        (cdkDropListDropped)="drop($event)"
-        (cdkDropListEntered)="AbrirPanel(pp)"
         >
         <mat-expansion-panel-header>
           <mat-panel-title>
             Publico
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <div class="acordion">
-          <form [formGroup]="grupoForm">
-            <ion-item formArrayName="items"
-            *ngFor="let item of grupoForm.controls ; let i = index;">
-              <app-item-perfil 
-              cdkDrag 
-              [cdkDragDisabled]="ordenar"
-              [ordenando]="ordenar" 
-              [item]="item"
-              [posicion]="i"
-              (eliminar)="EliminarElemento(item)">
-              </app-item-perfil>
-            </ion-item>
-          </form>
+        <div 
+        cdkDropList
+        [cdkDropListData]="publicoForm"
+        (cdkDropListDropped)="drop($event)"
+        
+        class="acordion" formArrayName="publico">
+          <div style="width: 100%;"
+          *ngFor="let itemPublico of publicoForm.controls; let i = index"
+          [formGroupName]="i"
+          cdkDrag 
+          [cdkDragDisabled]="ordenar"
+          >
+            <app-item-perfil 
+            formControlName="item"
+            [ordenando]="ordenar" 
+            [posicion]="i"
+            (eliminar)="EliminarElemento(itemPublico, publicoForm)">
+            </app-item-perfil>
+          </div>
+          
         </div>
       </mat-expansion-panel>
-      <mat-expansion-panel  #pg  
-        cdkDropList
-        [cdkDropListData]="general"
-        (cdkDropListDropped)="drop($event)"
-        (cdkDropListEntered)="AbrirPanel(pg)">
+      <mat-expansion-panel  #pg  >
         <mat-expansion-panel-header>
           <mat-panel-title>
             General
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <div class="acordion" >
-
-        
+        <div class="acordion" 
+        cdkDropList
+        [cdkDropListData]="generalForm"
+        (cdkDropListDropped)="drop($event)"formArrayName="general">
+        <div style="width: 100%;"
+        *ngFor="let itemPublico of generalForm.controls; let i = index"
+        [formGroupName]="i"
+        cdkDrag 
+        [cdkDragDisabled]="ordenar"
+        >
           <app-item-perfil 
-          *ngFor="let item of general; let i = index;" 
-          cdkDrag 
-          [cdkDragDisabled]="ordenar"
+          formControlName="item"
           [ordenando]="ordenar" 
-          [item]="item"
-          (eliminar)="EliminarElemento(item)">
+          [posicion]="i"
+          (eliminar)="EliminarElemento($event, generalForm)">
           </app-item-perfil>
         </div>
+        
+      </div>
       </mat-expansion-panel>
       
       <mat-expansion-panel  #pper  
-      cdkDropList
-        [cdkDropListData]="personal"
-        (cdkDropListDropped)="drop($event)"
-        (cdkDropListEntered)="AbrirPanel(pper)">
+      >
         <mat-expansion-panel-header>
           <mat-panel-title>
             Personal
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <div class="acordion">
-
-        
+        <div class="acordion" 
+        cdkDropList
+        [cdkDropListData]="personalForm"
+        (cdkDropListDropped)="drop($event)"formArrayName="personal">
+        <div style="width: 100%;"
+        *ngFor="let itemPublico of personalForm.controls; let i = index"
+        [formGroupName]="i"
+        cdkDrag 
+        [cdkDragDisabled]="ordenar"
+        >
           <app-item-perfil 
-          *ngFor="let item of personal; let i = index;" 
-          cdkDrag 
-          [cdkDragDisabled]="ordenar"
+          formControlName="item"
           [ordenando]="ordenar" 
-          [item]="item"
-          (eliminar)="EliminarElemento(item)">
+          [posicion]="i"
+          (eliminar)="EliminarElemento(itemPublico, personalForm)">
           </app-item-perfil>
         </div>
+        
+      </div>
       </mat-expansion-panel>
       
       <mat-expansion-panel  #ppro  
-      cdkDropList
-        [cdkDropListData]="profesional"
-        (cdkDropListDropped)="drop($event)"
-        (cdkDropListEntered)="AbrirPanel(ppro)">
+      >
         <mat-expansion-panel-header>
           <mat-panel-title>
             Profesional
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <div class="acordion">
-
-        
+        <div class="acordion" 
+        cdkDropList
+        [cdkDropListData]="profesionalForm"
+        (cdkDropListDropped)="drop($event)"formArrayName="profesional">
+        <div style="width: 100%;"
+        *ngFor="let itemPublico of profesionalForm.controls; let i = index"
+        [formGroupName]="i"
+        cdkDrag 
+        [cdkDragDisabled]="ordenar"
+        >
           <app-item-perfil 
-          *ngFor="let item of profesional; let i = index;" 
-          cdkDrag 
-          [cdkDragDisabled]="ordenar"
+          formControlName="item"
           [ordenando]="ordenar" 
-          [item]="item"
-          (eliminar)="EliminarElemento(item)">
+          [posicion]="i"
+          (eliminar)="EliminarElemento($event, profesionalForm)">
           </app-item-perfil>
         </div>
+        
+      </div>
       </mat-expansion-panel>
     </mat-accordion>
   </ion-list>
+  </form>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed"  >
-    <ion-fab-button size="small" (click)="SeleccionSeccion()">
-      <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+      <ion-fab-button size="small" (click)="SeleccionSeccion()">
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+    <ion-fab vertical="bottom" horizontal="start" slot="fixed"  >
+        <ion-fab-button size="small"  color="success" (click)="onSubmit()">
+          <ion-icon name="save"></ion-icon>
+        </ion-fab-button>
+      </ion-fab>
 </ion-content>
 
 
