--- a/src/app/config-perfil/item-perfil/item-perfil.component.scss
+++ b/src/app/config-perfil/item-perfil/item-perfil.component.scss
@@ -1,11 +1,4 @@
-.icono {
-  margin-inline-end: 0px !important; 
-  align-self:flex-start; 
-  margin-top: 10px;
-  color: rgba(var(--ion-text-color-rgb,0,0,0),0.54);
-    font-size: 24px;
-    font-size: 1.6em;
-    --highlight-color-focused: #3880ff;
-    --highlight-color-valid: #10dc60;
-    --highlight-color-invalid: #f04141;
+
+.item-selector {
+  height: 49px;
 }
