--- a/src/app/config-perfil/item-perfil/item-perfil.component.html
+++ b/src/app/config-perfil/item-perfil/item-perfil.component.html
@@ -1,94 +1,108 @@
-<ion-item style="padding: 0px;display: flex; align-items: flex-start" [formGroup]="form">
+
+<ion-item 
+style="padding: 0px; display: flex; align-items: flex-start; margin-bottom: 1%;;" 
+[formGroup]="form"
+>
 
   <!--Icono del item-->
   <fa-icon 
-  *ngIf="tipoItem && selecionado"
+  *ngIf="tipoItem"
   [icon]="tipoItem? [prefijoIcono, iconoValor] : null"  
   (click)="MostrarSelector()" 
   class="icono"
   slot="start" ></fa-icon>
  
-  
   <!--Titulo del item-->
   <ion-label 
   position="floating" 
   style="padding-left: 10px;" 
-  *ngIf="selecionado">
+  *ngIf="tipoItem">
     {{tipoItem? tipoItem.descripcion : ''}}
   </ion-label>
 
   <!--Columna con dos inputs, el primero aparece cuando el item solo acepta un valor, el segundo cuando el item acepta dos valores-->
   <div 
-  style="display: flex; flex-direction: column; width:  auto;" 
-  *ngIf="tipoItem && selecionado">
+  style="display: flex; flex-direction: column; width:  100%;" 
+  *ngIf="tipoItem">
     <!--Primer input-->
     <ion-input 
-    *ngIf="(tipoItem && tipoItem.tipo === 0) || (tipoItem && tipoItem.tipo === 2) && selecionado"  
+    *ngIf="tipoItem && tipoItem.tipo === 0 || tipoItem.tipo === 2 || tipoItem.tipo === 1 ||  tipoItem.tipo === 3 ||  tipoItem.tipo === 6 ||  tipoItem.tipo === 7"  
     [placeholder]="MarcaAgua(0)" 
-    style="margin-left: 2%;" 
+    style="margin-left: 2%; width: 100%;" 
     (ionInput)="onInput($event.target.value, 0)"
     [value]="Valor(0)"
     [disabled]="isDisabled"
     maxlength="150"
     minlength="2"
+    [type]="tipo"
     formControlName="campo1"></ion-input>
     
     <!--Segundo input-->
     <ion-input 
-    *ngIf="(tipoItem && tipoItem.tipo === 2) && selecionado"  
-    [placeholder]="MarcaAgua(1)" style="margin-left: 2%;" 
+    *ngIf="tipoItem && tipoItem.tipo === 2  || tipoItem.tipo === 7 " 
+    style="margin-left: 2%; width: 100%;"  
+    [placeholder]="MarcaAgua(1)"
     [value]="Valor(1)"
     (ionInput)="onInput($event.target.value, 1)"
-    [disabled]="isDisabled"></ion-input>
+    [disabled]="isDisabled"
+    [type]="tipo"
+    formControlName="campo2"
+    ></ion-input>
   </div>
 
   <!--Selector para item de seleccion-->
   <ion-select 
-  *ngIf="(tipoItem && tipoItem.tipo === 4) && selecionado" 
-  style="position: relative; margin-left: 2%;" 
+  *ngIf="tipoItem && tipoItem.tipo === 4" 
+  style="position: relative; margin-left: 2%; width: 100%;" 
   interface="popover" ok-text="Aceptar" 
   cancel-text="Cancelar" 
   placeholder="Seleccione una opcion"
-  (ionInput)="onInput($event.target.value, 0)">
+  (ionChange)="onInput($event.target.value, 0)"
+  [value]="Valor(0)"
+  formControlName="campo1">
     <ion-select-option *ngFor="let valor of valoresTI" [value]="valor.id">{{valor.valor}}</ion-select-option>
   </ion-select>
 
   <!--Input para fecha-->
   <ion-datetime 
-  *ngIf="(tipoItem && tipoItem.tipo === 5) && selecionado" 
-  style="position: relative; margin-left: 2%;" 
+  *ngIf="tipoItem && tipoItem.tipo === 5" 
+  style="position: relative; margin-left: 2%; width: 100%;" 
   displayFormat="DD/MM/YYYY" 
   min="1900-01-01" 
   [max]="FechaActual() | date:'yyy-MM-dd'"  
-  [value]="FechaActual() | date:'MM-dd-yyyy'" 
-  cancel-text="Cancelar" done-text="Aceptar" 
-  (ionChange)="AlmacenarValores()"
-  (ionInput)="onInput($event.target.value, 0)"></ion-datetime>
-  
+  [value]="Valor(0)? Valor(0) : FechaActual() | date:'MM-dd-yyyy'"
+  cancel-text="Cancelar" 
+  done-text="Aceptar" 
+  (ionChange)="onInput($event.target.value, 0)"
+  formControlName="campo1"
+  ></ion-datetime>
+
   <!--Icono para eliminar-->
   <ion-icon 
   *ngIf="!ordenando" 
   name="close-circle-outline" 
   slot="end" 
   (click)="Eliminar()" 
-  style="margin-inline-start: 1px !important; position: relative; align-self:flex-start"></ion-icon>
+  style="margin-inline-start: 1px !important; position: relative; align-self:flex-start"
+  ></ion-icon>
   
   <!--Seleccionar tipo de item-->
   <ion-select 
-  *ngIf="!selecionado" 
+  *ngIf="!tipoItem" 
   ok-text="Aceptar" 
   cancel-text="Cancelar" 
-  style="max-width: 100% !important; position: relative;" 
+  style="min-width: 100% !important; padding-left: 16px; min-height: 56px; position: relative;" 
   interface="popover" 
   [value]="tipoItem" 
   placeholder="Seleccione una opcion" 
-  (ionChange)="BuscarValoresTI($event.target.value)"  
+  (ionChange)="SelecionarTipoItem($event.target.value)"  
   formControlName="selector"
   >
     <ion-select-option *ngFor="let item of tiposItems" [value]="item">{{item.descripcion}}</ion-select-option>
   </ion-select>
-
+  
 </ion-item>
-<ion-text *ngIf="errors" color="danger" class="form-error">
-  {{errors}}
-</ion-text>
+      <ion-text *ngIf="MensajeError()" color="danger" class="form-error">
+        {{MensajeError()}}
+      </ion-text>
+
