--- a/src/app/config-perfil/item-perfil/item-perfil.component.scss
+++ b/src/app/config-perfil/item-perfil/item-perfil.component.scss
@@ -2,3 +2,9 @@
 .item-selector {
   height: 49px;
 }
+.placeholder {
+  --placeholder-color: initial;
+  --placeholder-font-style: initial;
+  --placeholder-font-weight: initial;
+  --placeholder-opacity: .5;
+}
