--- a/src/app/config-perfil/config-perfil.page.html
+++ b/src/app/config-perfil/config-perfil.page.html
@@ -62,7 +62,8 @@
               [form]="itemPublico"
               formControlName="item"
               [ordenando]="ordenar" 
-              (eliminar)="EliminarElemento(publicoForm, i)">
+              (eliminar)="EliminarElemento(publicoForm, i)"
+              (cambio)="ChangeForm()">
             </app-item-perfil>
         </div>
       </mat-expansion-panel>
@@ -91,7 +92,8 @@
             [form]="itemGeneral"
             formControlName="item"
             [ordenando]="ordenar" 
-            (eliminar)="EliminarElemento(generalForm, i)">
+            (eliminar)="EliminarElemento(generalForm, i)"
+            (cambio)="ChangeForm()">
             </app-item-perfil>
           </div>
       </mat-expansion-panel>
@@ -121,7 +123,8 @@
           [form]="itemPersonal"
           formControlName="item"
           [ordenando]="ordenar" 
-          (eliminar)="EliminarElemento(personalForm, i)">
+          (eliminar)="EliminarElemento(personalForm, i)"
+          (cambio)="ChangeForm()">
           </app-item-perfil>
         </div>
       </mat-expansion-panel>
@@ -151,27 +154,32 @@
           [form]="itemProfesional"
           formControlName="item"
           [ordenando]="ordenar" 
-          (eliminar)="EliminarElemento(profesionalForm, i)">
+          (eliminar)="EliminarElemento(profesionalForm, i)"
+          (cambio)="ChangeForm()">
           </app-item-perfil>
         </div>
       </mat-expansion-panel>
     </mat-accordion>
   </ion-list>
-  
-  
   </form>
   
-  
   <ion-fab vertical="bottom" horizontal="end" slot="fixed"  >
-      <ion-fab-button size="small" (click)="SeleccionSeccion()">
-        <ion-icon name="add"></ion-icon>
-      </ion-fab-button>
-    </ion-fab>
-    <ion-fab vertical="bottom" horizontal="start" slot="fixed"  >
-        <ion-fab-button size="small"  color="success" (click)="onSubmit()">
-          <ion-icon name="save"></ion-icon>
-        </ion-fab-button>
-      </ion-fab>
+    <ion-fab-button size="small" (click)="SeleccionSeccion()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  <ion-fab vertical="bottom" horizontal="start" slot="fixed"  >
+    <ion-fab-button size="small" color="success" (click)="onSubmit()">
+      <ion-icon name="save"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
+  
+
+
+
+
 </ion-content>
+
 
 
