Guardian aplicado a las rutas, conexion con el back para listar categorias, items e items de los usuarios, al igual que el metodo para almacenar la configuracion del perfil

--- a/src/global.scss
+++ b/src/global.scss
@@ -37,3 +37,9 @@
     --highlight-color-valid: #10dc60;
     --highlight-color-invalid: #f04141;
 }
+.spinner {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+}
