--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,20 +2,17 @@
   <ion-router-outlet></ion-router-outlet>
   <ion-tabs>
     <ion-tab-bar slot="bottom">
-      <ion-tab-button >
+      <ion-tab-button tab="ConfigurarPerfil">
         <ion-icon name="person"></ion-icon>
-        <ion-label>Configuración</ion-label>
-        <ion-badge>6</ion-badge>
       </ion-tab-button>
   
-      <ion-tab-button >
+      <ion-tab-button tab="home" >
         <ion-icon name="home"></ion-icon>
-        <ion-label>Home</ion-label>
       </ion-tab-button>
   
       <ion-tab-button >
         <ion-icon name="happy"></ion-icon>
-        <ion-label>Wink's</ion-label>
+        <ion-badge>6</ion-badge>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
