--- a/src/app/config-perfil/config-perfil.page.html
+++ b/src/app/config-perfil/config-perfil.page.html
@@ -1,185 +1,218 @@
-<ion-header translucent>
-  <ion-toolbar>
-    <ion-title>Mi Perfil</ion-title>
-    <ion-buttons slot="primary">
-      <ion-icon [name]="ordenar? 'list' : 'list-box'" (click)="Ordenar()" style="font-size: 150%;"></ion-icon>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
+<div *ngIf="loading" class="spinner">
+  <spinner></spinner>
+</div>
 
-
-<ion-content fullscreen> 
-  <div class="contenedor" >
-    <ion-avatar> 
-      <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y" >
-    </ion-avatar>
-  </div>
-
-  <div class="contenedor" >
-    <ion-item style="width: 90%;">
-      <ion-label style="font-size: xx-large; text-align: center;">
-          {{nombre}}
-      </ion-label>
-    </ion-item>
-  </div>
+<div *ngIf="!loading">
+<ion-menu side="start">
+  <ion-header>
+    <ion-toolbar translucent>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <ion-item>
+        <ion-icon name="home" slot="start"></ion-icon>
+        <ion-label>Home</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="person" slot="start"></ion-icon>
+        <ion-label>Profile</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="chatbubbles" slot="start"></ion-icon>
+        <ion-label>Messages</ion-label>
+      </ion-item>
+      <ion-item (click)="Logout()">
+        <ion-icon name="settings" slot="start"></ion-icon>
+        <ion-label>Salir</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+<div class="ion-page" main>
   
-  <form [formGroup]="grupoForm"  (submit)="onSubmit()">
-  
+  <ion-header translucent>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>Mi Perfil</ion-title>
+      <ion-buttons slot="end">
+        <ion-icon [name]="ordenar? 'list' : 'list-box'" (click)="Ordenar()" style="font-size: 150%;"></ion-icon>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
+
+
+
+  <ion-content fullscreen> 
       
-  <ion-list >
-    <ion-item>
-      <fa-icon 
-      [icon]="['fas', 'book-open'] "
-      class="icono"
-      slot="start"></fa-icon>
-      <ion-label position="floating">Biografia</ion-label>
-      <ion-textarea maxlength="250"
-      formControlName="biografia"></ion-textarea>
-    </ion-item>
-    <mat-accordion multi="true" cdkDropListGroup>
-      <mat-expansion-panel #pp 
-      cdkDropList
-        [cdkDropListData]="publicoForm"
-        (cdkDropListDropped)="MoverItem($event)"
-        (cdkDropListEntered)="AbrirPanel(pp)"
-        (cdkDropListExited)="CerrarPanel(pp)"
-         formArrayName="0"
-        >
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            Publico
-          </mat-panel-title>
-        </mat-expansion-panel-header>
-        <div
-          style="width: 100%;"
-          class="acordion"
-          *ngFor="let itemPublico of publicoForm.controls; let i = index"
-          [formGroupName]="i"
-          cdkDrag 
-          [cdkDragDisabled]="ordenar"
-          [ngClass]="{'ordenar': !ordenar}">
-            <app-item-perfil  
-              [form]="itemPublico"
+    <div class="contenedor" >
+      <ion-avatar> 
+        <img [src]="avatar" >
+      </ion-avatar>
+    </div>
+
+    <div class="contenedor" >
+      <ion-item style="width: 90%;">
+        <ion-label style="font-size: xx-large; text-align: center;">
+            {{nombre}}
+        </ion-label>
+      </ion-item>
+    </div>
+    
+    <form [formGroup]="grupoForm"  (submit)="onSubmit()">
+    
+        
+    <ion-list >
+      <ion-item>
+        <fa-icon 
+        [icon]="['fas', 'book-open'] "
+        class="icono"
+        slot="start"></fa-icon>
+        <ion-label position="floating">Biografia</ion-label>
+        <ion-textarea maxlength="250"
+        formControlName="biografia"></ion-textarea>
+      </ion-item>
+      <mat-accordion multi="true" cdkDropListGroup>
+        <mat-expansion-panel #pp 
+        cdkDropList
+          [cdkDropListData]="publicoForm"
+          (cdkDropListDropped)="MoverItem($event)"
+          (cdkDropListEntered)="AbrirPanel(pp)"
+          (cdkDropListExited)="CerrarPanel(pp)"
+          formArrayName="0"
+          >
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Publico
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <div
+            style="width: 100%;"
+            class="acordion"
+            *ngFor="let itemPublico of publicoForm.controls; let i = index"
+            [formGroupName]="i"
+            cdkDrag 
+            [cdkDragDisabled]="ordenar"
+            [ngClass]="{'ordenar': !ordenar}">
+              <app-item-perfil  
+                [form]="itemPublico"
+                formControlName="item"
+                [ordenando]="ordenar" 
+                (eliminar)="EliminarElemento(publicoForm, i)"
+                (cambio)="ChangeForm()">
+              </app-item-perfil>
+          </div>
+        </mat-expansion-panel>
+        <mat-expansion-panel  #pg  
+        cdkDropList
+          [cdkDropListData]="generalForm"
+          (cdkDropListDropped)="MoverItem($event)"
+          (cdkDropListEntered)="AbrirPanel(pg)"
+          (cdkDropListExited)="CerrarPanel(pg)"
+          formArrayName="1"
+          >
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              General
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+            <div style="width: 100%;"
+            class="acordion"
+            *ngFor="let itemGeneral of generalForm.controls; let i = index"
+            [formGroupName]="i"
+            cdkDrag 
+            [cdkDragDisabled]="ordenar"
+            [ngClass]="{'ordenar': !ordenar}"
+            >
+              <app-item-perfil  
+              [form]="itemGeneral"
               formControlName="item"
               [ordenando]="ordenar" 
-              (eliminar)="EliminarElemento(publicoForm, i)"
+              (eliminar)="EliminarElemento(generalForm, i)"
               (cambio)="ChangeForm()">
-            </app-item-perfil>
-        </div>
-      </mat-expansion-panel>
-      <mat-expansion-panel  #pg  
-      cdkDropList
-        [cdkDropListData]="generalForm"
-        (cdkDropListDropped)="MoverItem($event)"
-        (cdkDropListEntered)="AbrirPanel(pg)"
-        (cdkDropListExited)="CerrarPanel(pg)"
-        formArrayName="1"
+              </app-item-perfil>
+            </div>
+        </mat-expansion-panel>
+        
+        <mat-expansion-panel  #pper  
+          cdkDropList
+          [cdkDropListData]="personalForm"
+          (cdkDropListEntered)="AbrirPanel(pper)"
+          (cdkDropListDropped)="MoverItem($event)"
+          (cdkDropListExited)="CerrarPanel(pper)"
+          formArrayName="2"
         >
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            General
-          </mat-panel-title>
-        </mat-expansion-panel-header>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Personal
+            </mat-panel-title>
+          </mat-expansion-panel-header>
           <div style="width: 100%;"
           class="acordion"
-          *ngFor="let itemGeneral of generalForm.controls; let i = index"
+          *ngFor="let itemPersonal of personalForm.controls; let i = index"
           [formGroupName]="i"
           cdkDrag 
           [cdkDragDisabled]="ordenar"
           [ngClass]="{'ordenar': !ordenar}"
           >
-            <app-item-perfil  
-            [form]="itemGeneral"
+            <app-item-perfil 
+            [form]="itemPersonal"
             formControlName="item"
             [ordenando]="ordenar" 
-            (eliminar)="EliminarElemento(generalForm, i)"
+            (eliminar)="EliminarElemento(personalForm, i)"
             (cambio)="ChangeForm()">
             </app-item-perfil>
           </div>
-      </mat-expansion-panel>
-      
-      <mat-expansion-panel  #pper  
-        cdkDropList
-        [cdkDropListData]="personalForm"
-        (cdkDropListEntered)="AbrirPanel(pper)"
-        (cdkDropListDropped)="MoverItem($event)"
-        (cdkDropListExited)="CerrarPanel(pper)"
-        formArrayName="2"
-      >
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            Personal
-          </mat-panel-title>
-        </mat-expansion-panel-header>
-        <div style="width: 100%;"
-        class="acordion"
-        *ngFor="let itemPersonal of personalForm.controls; let i = index"
-        [formGroupName]="i"
-        cdkDrag 
-        [cdkDragDisabled]="ordenar"
-        [ngClass]="{'ordenar': !ordenar}"
+        </mat-expansion-panel>
+        
+        <mat-expansion-panel  #ppro  
+          cdkDropList
+          [cdkDropListData]="profesionalForm"
+          (cdkDropListEntered)="AbrirPanel(ppro)"
+          (cdkDropListDropped)="MoverItem($event)"
+          (cdkDropListExited)="CerrarPanel(ppro)"
+          formArrayName="3"
         >
-          <app-item-perfil 
-          [form]="itemPersonal"
-          formControlName="item"
-          [ordenando]="ordenar" 
-          (eliminar)="EliminarElemento(personalForm, i)"
-          (cambio)="ChangeForm()">
-          </app-item-perfil>
-        </div>
-      </mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Profesional
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <div style="width: 100%;"
+          class="acordion"
+          *ngFor="let itemProfesional of profesionalForm.controls; let i = index"
+          [formGroupName]="i"
+          cdkDrag 
+          [cdkDragDisabled]="ordenar"
+          [ngClass]="{'ordenar': !ordenar}"
+          >
+            <app-item-perfil 
+            [form]="itemProfesional"
+            formControlName="item"
+            [ordenando]="ordenar" 
+            (eliminar)="EliminarElemento(profesionalForm, i)"
+            (cambio)="ChangeForm()">
+            </app-item-perfil>
+          </div>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </ion-list>
+    </form>
+    
+    
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed"  >
+        <ion-fab-button *ngIf="FormValid()" size="small" color="success" (click)="onSubmit()">
+          <ion-icon name="save"></ion-icon>
+        </ion-fab-button>
+        <ion-fab-button size="small" (click)="SeleccionSeccion()">
+          <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
       
-      <mat-expansion-panel  #ppro  
-        cdkDropList
-        [cdkDropListData]="profesionalForm"
-        (cdkDropListEntered)="AbrirPanel(ppro)"
-        (cdkDropListDropped)="MoverItem($event)"
-        (cdkDropListExited)="CerrarPanel(ppro)"
-        formArrayName="3"
-      >
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            Profesional
-          </mat-panel-title>
-        </mat-expansion-panel-header>
-        <div style="width: 100%;"
-        class="acordion"
-        *ngFor="let itemProfesional of profesionalForm.controls; let i = index"
-        [formGroupName]="i"
-        cdkDrag 
-        [cdkDragDisabled]="ordenar"
-        [ngClass]="{'ordenar': !ordenar}"
-        >
-          <app-item-perfil 
-          [form]="itemProfesional"
-          formControlName="item"
-          [ordenando]="ordenar" 
-          (eliminar)="EliminarElemento(profesionalForm, i)"
-          (cambio)="ChangeForm()">
-          </app-item-perfil>
-        </div>
-      </mat-expansion-panel>
-    </mat-accordion>
-  </ion-list>
-  </form>
-  
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed"  >
-    <ion-fab-button size="small" (click)="SeleccionSeccion()">
-      <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
-  <ion-fab vertical="bottom" horizontal="start" slot="fixed"  >
-    <ion-fab-button size="small" color="success" (click)="onSubmit()">
-      <ion-icon name="save"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+    </ion-fab>
 
-  
-
-
-
-
-</ion-content>
-
-
-
+  </ion-content>
+</div>
+</div>
