Se corrigieron errores en las paginas, se agrego el formulario para perfil vacio, se aplico guard para perfil vacio

--- a/src/app/pages/config-perfil/item-perfil/item-perfil.component.html
+++ b/src/app/pages/config-perfil/item-perfil/item-perfil.component.html
@@ -1,5 +1,6 @@
 <ion-item 
 style="padding: 0px; display: flex; align-items: flex-start; margin-bottom: 1%;" 
+class="item-has-placeholder"
 [ngClass]="{'item-has-focus': focus}"
 [formGroup]="form"
 >
