--- a/src/app/pages/config-perfil/config-perfil.page.html
+++ b/src/app/pages/config-perfil/config-perfil.page.html
@@ -44,11 +44,9 @@
     </ion-toolbar>
   </ion-header>
 
-
-
-  <ion-content fullscreen> 
+  <ion-content class="ion-padding"> 
       
-    <div class="contenedor" >
+    <div class="contenedorAvatar" >
       <ion-avatar> 
         <img [src]="avatar" >
       </ion-avatar>
@@ -62,7 +60,7 @@
       </ion-item>
     </div>
     
-    <form [formGroup]="grupoForm"  (submit)="onSubmit()">
+    <form [formGroup]="grupoForm"  (ngSubmit)="onSubmit()">
     
         
     <ion-list >
@@ -73,7 +71,9 @@
         slot="start"></fa-icon>
         <ion-label position="floating">Biografia</ion-label>
         <ion-textarea maxlength="250"
-        formControlName="biografia"></ion-textarea>
+        formControlName="biografia"
+        (ionInput)="ChangeForm()"
+        ></ion-textarea>
       </ion-item>
       <mat-accordion multi="true" cdkDropListGroup>
         <mat-expansion-panel #pp 
@@ -96,7 +96,9 @@
             [formGroupName]="i"
             cdkDrag 
             [cdkDragDisabled]="ordenar"
-            [ngClass]="{'ordenar': !ordenar}">
+            [ngClass]="{'ordenar': !ordenar}"
+            (cdkDragStarted)="Drag()"
+            (cdkDragEnded)="Drop()">
               <app-item-perfil  
                 [form]="itemPublico"
                 formControlName="item"
@@ -126,6 +128,8 @@
             cdkDrag 
             [cdkDragDisabled]="ordenar"
             [ngClass]="{'ordenar': !ordenar}"
+            (cdkDragStarted)="Drag()"
+            (cdkDragEnded)="Drop()"
             >
               <app-item-perfil  
               [form]="itemGeneral"
@@ -157,6 +161,8 @@
           cdkDrag 
           [cdkDragDisabled]="ordenar"
           [ngClass]="{'ordenar': !ordenar}"
+          (cdkDragStarted)="Drag()"
+          (cdkDragEnded)="Drop()"
           >
             <app-item-perfil 
             [form]="itemPersonal"
@@ -188,6 +194,8 @@
           cdkDrag 
           [cdkDragDisabled]="ordenar"
           [ngClass]="{'ordenar': !ordenar}"
+          (cdkDragStarted)="Drag()"
+          (cdkDragEnded)="Drop()"
           >
             <app-item-perfil 
             [form]="itemProfesional"
@@ -203,7 +211,7 @@
     </form>
     
     
-    <ion-fab vertical="bottom" horizontal="end" slot="fixed"  >
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed"  *ngIf="!isDrag" >
         <ion-fab-button *ngIf="FormValid()" size="small" color="success" (click)="onSubmit()">
           <ion-icon name="save"></ion-icon>
         </ion-fab-button>
