--- a/src/global.scss
+++ b/src/global.scss
@@ -43,3 +43,9 @@
   height: 100%;
   justify-content: center;
 }
+
+.contenedorAvatar {
+  justify-content: center;
+  display: flex;
+  padding-top: 2%;
+}
